# OCXReader

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: clean-cache.yml  hosted-ninja-vcpkg.yml  quality.yml
cmake/: internal_utils.cmake
libs/ocx/: CMakeLists.txt
libs/ocx/cmake/: internal_utils.cmake
libs/ocx/include/ocx/: ocx-context.h  ocx-helper.h
libs/ocx/include/ocx/internal/: ocx-class-catalogue.h  ocx-reference-surfaces.h
libs/ocx/src/: ocx-all.cc  ocx-context.cc  ocx-helper.cc  ocx-reader.cc
libs/ocx/src/context_entities/: ocx-bar-section.cc  ocx-vessel-grid-wrapper.cc
libs/ocx/src/reader/class_catalogue/: ocx-class-catalogue.cc
libs/ocx/src/reader/class_catalogue/x_section_catalogue/: ocx-x-section-catalogue.cc
libs/ocx/src/reader/shared/: ocx-curve.cc  ocx-cut-by.cc  ocx-limited-by.cc  ocx-outer-contour.cc  ocx-surface.cc
libs/ocx/src/reader/vessel/: ocx-vessel.cc
libs/ocx/src/reader/vessel/coordinate_system/: ocx-coordinate-system.cc
libs/ocx/src/reader/vessel/panel/: ocx-panel.cc
libs/ocx/src/reader/vessel/panel/composed_of/: ocx-composed-of.cc
libs/ocx/src/reader/vessel/panel/stiffened_by/: ocx-stiffened-by.cc
libs/ocx/src/reader/vessel/reference_surfaces/: ocx-reference-surfaces.cc
libs/ocx/test/: CMakeLists.txt
libs/ocx/test/src/: ocx-test-all.cc  ocx-test-helper.cc
libs/shipxml/: CMakeLists.txt
libs/shipxml/cmake/: internal_utils.cmake
libs/shipxml/src/: shipxml-all.cc  shipxml-driver.cc
libs/shipxml/src/reader/: shipxml-curve-reader.cc  shipxml-panel-reader.cc
ocxreader/: CMakeLists.txt
ocxreader/config/: config.example.json
ocxreader/data/: ocx-plate-contour-test.3docx
ocxreader/src/: main.cc  ocxreader-export.cc  ocxreader.cc
vcpkg/ports/occutils/: portfile.cmake  vcpkg.json
vcpkg/ports/opencascade/: portfile.cmake
vcpkg/triplets/: x64-osx.cmake
